moving to new mac

--- a/src/play/meso_play.ipynb
+++ b/src/play/meso_play.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
+   "outputs": [],
    "source": [
     "m = Meso(token='0191c61bf7914bd49b8bd7a98abb9469')\n",
     "precip = m.precip(stid='MTM09', start='201504241800', end='201504271200', units='height|m')"
@@ -23,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +34,7 @@
        "1.7222852512155589"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,40 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'STATUS': 'ACTIVE',\n",
-       " 'MNET_ID': '65',\n",
-       " 'PERIOD_OF_RECORD': {'start': '2021-12-02T21:15:00Z',\n",
-       "  'end': '2022-05-05T21:41:00Z'},\n",
-       " 'ELEVATION': '2765',\n",
-       " 'NAME': 'GW0891 Boise',\n",
-       " 'STID': 'G0891',\n",
-       " 'ELEV_DEM': '2755.9',\n",
-       " 'LONGITUDE': '-116.20833',\n",
-       " 'STATE': 'ID',\n",
-       " 'RESTRICTED': False,\n",
-       " 'LATITUDE': '43.59600',\n",
-       " 'TIMEZONE': 'America/Boise',\n",
-       " 'ID': '171054'}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "stat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -325,21 +294,6 @@
       "44.229722\n",
       "-115.246944\n",
       "TR216\n",
-      "CLASS III 11-C\n",
-      "TR218\n",
-      "43.5994\n",
-      "-116.2081\n",
-      "TR218\n",
-      "CLASS III 20-C\n",
-      "WRIW4\n",
-      "43.5994\n",
-      "-116.2081\n",
-      "WRIW4\n",
-      "FIRE RAWS #6\n",
-      "TR226\n",
-      "43.5994\n",
-      "-116.2081\n",
-      "TR226\n",
       "FRWS-11\n",
       "TS002\n",
       "43.5994\n",
@@ -385,11 +339,6 @@
       "43.5994\n",
       "-116.2081\n",
       "TR252\n",
-      "PORTABLE #14\n",
-      "TR253\n",
-      "43.5994\n",
-      "-116.2081\n",
-      "TR253\n",
       "MICRO 5-FM\n",
       "TR262\n",
       "43.5994\n",
@@ -405,11 +354,6 @@
       "43.5994\n",
       "-116.2081\n",
       "TR319\n",
-      "STANLEY_RS\n",
-      "NS026\n",
-      "44.1769\n",
-      "-114.9239\n",
-      "NS026\n",
       "FRWS-15\n",
       "TR363\n",
       "43.5994\n",
@@ -480,46 +424,11 @@
       "44.169114\n",
       "-114.925872\n",
       "STNI1\n",
-      "NIFC CLASS III\n",
-      "TR639\n",
-      "43.5994\n",
-      "-116.2081\n",
-      "TR639\n",
-      "TEST ID\n",
-      "TR640\n",
-      "43.5994\n",
-      "-116.2081\n",
-      "TR640\n",
-      "TEST ID\n",
-      "TR641\n",
-      "43.5994\n",
-      "-116.2081\n",
-      "TR641\n",
-      "TEST ID\n",
-      "TR642\n",
-      "43.5994\n",
-      "-116.2081\n",
-      "TR642\n",
-      "TEST ID\n",
-      "TR643\n",
-      "43.5994\n",
-      "-116.2081\n",
-      "TR643\n",
       "DEPOT TEST 0\n",
       "TR644\n",
       "43.599444\n",
       "-116.208056\n",
       "TR644\n",
-      "DEPOT TEST 1\n",
-      "TR645\n",
-      "43.598611\n",
-      "-116.208611\n",
-      "TR645\n",
-      "TEST ID\n",
-      "TR646\n",
-      "43.5994\n",
-      "-116.2081\n",
-      "TR646\n",
       "West Mountains\n",
       "PAY2\n",
       "44.385\n",
@@ -575,11 +484,6 @@
       "44.11732\n",
       "-115.98876\n",
       "C0810\n",
-      "Boise\n",
-      "IDTD\n",
-      "43.6500\n",
-      "-116.2800\n",
-      "IDTD\n",
       "Castle Mountain        Garden Valley\n",
       "H0169\n",
       "44.1518\n",
@@ -605,11 +509,6 @@
       "44.30107\n",
       "-116.08926\n",
       "ITD36\n",
-      "Stanley, Stanley Airport\n",
-      "K2U7\n",
-      "44.20833\n",
-      "-114.93444\n",
-      "K2U7\n",
       "FRWS-35\n",
       "TS373\n",
       "43.5994\n",
@@ -625,16 +524,6 @@
       "43.5994\n",
       "-116.2081\n",
       "TS391\n",
-      "TEST ID\n",
-      "TS418\n",
-      "43.5994\n",
-      "-116.2081\n",
-      "TS418\n",
-      "PARKS CANADA - FTS TEST\n",
-      "TS423\n",
-      "43.599444\n",
-      "-116.208056\n",
-      "TS423\n",
       "DEPOT TEST\n",
       "CHFI1\n",
       "43.5994\n",
@@ -730,11 +619,6 @@
       "43.70222\n",
       "-116.12056\n",
       "SGWI1\n",
-      "TEST WALLOPS\n",
-      "TS655\n",
-      "43.5994\n",
-      "-116.2081\n",
-      "TS655\n",
       "CW7501 Boise\n",
       "C7501\n",
       "43.57383\n",
@@ -745,11 +629,6 @@
       "43.96028\n",
       "-115.84444\n",
       "CVAI1\n",
-      "DEPOT TEST\n",
-      "TS711\n",
-      "43.599444\n",
-      "-116.208056\n",
-      "TS711\n",
       "FOX TRAIL RIDGE\n",
       "TS718\n",
       "44.183056\n",
@@ -805,11 +684,6 @@
       "43.59883\n",
       "-116.17345\n",
       "AN773\n",
-      "SMOKE M43\n",
-      "TS930\n",
-      "43.604722\n",
-      "-115.234167\n",
-      "TS930\n",
       "DEPOT TEST 210\n",
       "TT110\n",
       "43.599444\n",
@@ -890,36 +764,11 @@
       "43.8361111111\n",
       "-115.834722222\n",
       "IDHI\n",
-      "Boise River at Glenwood Bridge\n",
-      "BIGI\n",
-      "43.6602777778\n",
-      "-116.278333333\n",
-      "BIGI\n",
-      "Deadwood River below Deadwood Dam\n",
-      "DEDI\n",
-      "44.2961111111\n",
-      "-115.645555556\n",
-      "DEDI\n",
-      "Boise River near Twin Springs, Idaho\n",
-      "BTSI\n",
-      "43.6586111111\n",
-      "-115.727222222\n",
-      "BTSI\n",
-      "Payette River near Horseshoe Bend, ID\n",
-      "HRSI\n",
-      "43.945\n",
-      "-116.196944444\n",
-      "HRSI\n",
       "South Fork Payette River at Lowman, ID\n",
       "PRLI\n",
       "44.0847222222\n",
       "-115.602777778\n",
       "PRLI\n",
-      "Deadwood River above Deadwood Reservoir, ID\n",
-      "DRII\n",
-      "44.3483333333\n",
-      "-115.649722222\n",
-      "DRII\n",
       "Atlanta 3 Weather Station\n",
       "ATLI\n",
       "43.8047222222\n",
@@ -1035,101 +884,6 @@
       "43.71950\n",
       "-116.24333\n",
       "F1696\n",
-      "Idaho City\n",
-      "A3921\n",
-      "43.82302\n",
-      "-115.83856\n",
-      "A3921\n",
-      "Garden Valley\n",
-      "A3922\n",
-      "44.10450\n",
-      "-115.97239\n",
-      "A3922\n",
-      "PSU STAR Lab South Boise Village\n",
-      "1860P\n",
-      "43.58741\n",
-      "-116.19650\n",
-      "1860P\n",
-      "PSU STAR Lab Boise Harrison Blvd\n",
-      "1861P\n",
-      "43.63053\n",
-      "-116.20746\n",
-      "1861P\n",
-      "PSU STAR Lab Boise Azelea\n",
-      "1864P\n",
-      "43.67309\n",
-      "-116.29046\n",
-      "1864P\n",
-      "PSU STAR Lab Hidden Springs\n",
-      "1866P\n",
-      "43.72533\n",
-      "-116.25415\n",
-      "1866P\n",
-      "Boise Beekeeper\n",
-      "1868P\n",
-      "43.60015\n",
-      "-116.25734\n",
-      "1868P\n",
-      "RP's back porch\n",
-      "1869P\n",
-      "43.63614\n",
-      "-116.21861\n",
-      "1869P\n",
-      "PSU STAR LAB WINSTEAD PARK\n",
-      "1871P\n",
-      "43.62740\n",
-      "-116.26270\n",
-      "1871P\n",
-      "MesaVista\n",
-      "1872P\n",
-      "43.59602\n",
-      "-116.20821\n",
-      "1872P\n",
-      "PSU STAR Lab Northwest Boise City\n",
-      "1875P\n",
-      "43.67740\n",
-      "-116.28817\n",
-      "1875P\n",
-      "Idaho Conservation League - Boise\n",
-      "1878P\n",
-      "43.61911\n",
-      "-116.19633\n",
-      "1878P\n",
-      "Plateau Drive\n",
-      "1880P\n",
-      "43.61116\n",
-      "-116.15678\n",
-      "1880P\n",
-      "PSU STAR Lab boise Hillview\n",
-      "1881P\n",
-      "43.60585\n",
-      "-116.17321\n",
-      "1881P\n",
-      "BOISE STATE ATHLETICS\n",
-      "1883P\n",
-      "43.60246\n",
-      "-116.19654\n",
-      "1883P\n",
-      "Boise Eastman\n",
-      "A4622\n",
-      "43.61638\n",
-      "-116.20382\n",
-      "A4622\n",
-      "Boise Fire Station\n",
-      "A4623\n",
-      "43.61889\n",
-      "-116.21361\n",
-      "A4623\n",
-      "White Pine\n",
-      "A4624\n",
-      "43.57760\n",
-      "-116.17816\n",
-      "A4624\n",
-      "Psu Star Lab Boise Central Bench\n",
-      "3668P\n",
-      "43.60114\n",
-      "-116.23659\n",
-      "3668P\n",
       "Flying Wye I-84 East Inbound\n",
       "ITDE4\n",
       "43.59711\n",
@@ -1154,7 +908,7 @@
     }
    ],
    "source": [
-    "for stat in m.metadata(start = '202002010000', end = '202002100000', bbox = bounds)['STATION']:\n",
+    "for stat in m.metadata(start = '202002010000', end = '202002100000', bbox = bounds, vars = ['snow_depth','air_temp'])['STATION']:\n",
     "    name = stat['NAME']\n",
     "    long = stat['LONGITUDE']\n",
     "    lat = stat['LATITUDE']\n",
