multiprocessing first round success

--- a/src/play/ulmo_play_2.ipynb
+++ b/src/play/ulmo_play_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,8 @@
     "import pyproj\n",
     "from shapely.ops import unary_union\n",
     "from conversion import imperial_to_metric\n",
-    "from rasterio.windows import Window\n"
+    "from rasterio.windows import Window\n",
+    "import h5py"
    ]
   },
   {
@@ -131,27 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['fp', 'ann', 'inc', 'location'])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fps.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,24 +144,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = h5py.File(expanduser('~/uavsar/results/uavsar_snotel_sd/play.hdf5'),'w')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = iter(image_fps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "strftime() takes at least 1 argument (0 given)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/bsuhome/zacharykeskinen/uavsar/src/play/ulmo_play_2.ipynb Cell 9'\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bborah/bsuhome/zacharykeskinen/uavsar/src/play/ulmo_play_2.ipynb#ch0000011vscode-remote?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtime\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bborah/bsuhome/zacharykeskinen/uavsar/src/play/ulmo_play_2.ipynb#ch0000011vscode-remote?line=1'>2</a>\u001b[0m start_t \u001b[39m=\u001b[39m time\u001b[39m.\u001b[39;49mstrftime()\n",
-      "\u001b[0;31mTypeError\u001b[0m: strftime() takes at least 1 argument (0 given)"
-     ]
+     "data": {
+      "text/plain": [
+       "{'fp': '/bsuscratch/zacharykeskinen/data/uavsar/images/Utica, MT/uticam_21003_21004-002_21013-003_0034d_s01_L090_01_int_grd/uticam_21003_21004-002_21013-003_0034d_s01_L090VV_01.int.grd.tiff',\n",
+       " 'ann': '/bsuscratch/zacharykeskinen/data/uavsar/images/Utica, MT/uticam_21003_21004-002_21013-003_0034d_s01_L090_01_int_grd/uticam_21003_21004-002_21013-003_0034d_s01_L090_01_int_grd.csv',\n",
+       " 'inc': '/bsuscratch/zacharykeskinen/data/uavsar/images/Utica, MT/uticam_21003_21004-002_21013-003_0034d_s01_L090_01_int_grd/uticam_21003_21013_003_210223_L090_CX_01.inc.tiff',\n",
+       " 'location': 'Utica, MT'}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import time\n",
-    "start_t = time.strftime()\n"
+    "next(a)"
    ]
   },
   {
