--- a/src/play/ulmo_play_2.ipynb
+++ b/src/play/ulmo_play_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +36,187 @@
     "#This is the latest CUAHSI API endpoint\n",
     "wsdlurl = 'https://hydroportal.cuahsi.org/Snotel/cuahsi_1_1.asmx?WSDL'\n",
     "sites = ulmo.cuahsi.wof.get_sites(wsdlurl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def snotel_fetch(sitecode, start_date='2015-12-01', end_date = '2020-12-01'):\n",
+    "    vals = pd.DataFrame()\n",
+    "    for var in ['SNOTEL:WTEQ_H','SNOTEL:SNWD_H','SNOTEL:TOBS_H']:\n",
+    "        try:\n",
+    "            #Request snowdepths from the server\n",
+    "            values = ulmo.cuahsi.wof.get_values(wsdlurl, sitecode, var, start=start_date, end=end_date)\n",
+    "            #Convert to a Pandas DataFrame   \n",
+    "            values_df = pd.DataFrame.from_dict(values['values'])\n",
+    "            #Parse the datetime values to Pandas Timestamp objects\n",
+    "            values_df['datetime'] = pd.to_datetime(values_df['datetime'], utc=True)\n",
+    "            #Set the DataFrame index to the Timestamps\n",
+    "            values_df = values_df.set_index('datetime')\n",
+    "            #Convert values to float and replace -9999 nodata values with NaN\n",
+    "            values_df['value'] = pd.to_numeric(values_df['value']).replace(-9999, np.nan)\n",
+    "            #Remove any records flagged with lower quality\n",
+    "            values_df = values_df[values_df['quality_control_level_code'] == '1']\n",
+    "            #Rename values\n",
+    "            values_df = values_df.rename(columns = {'value':var})\n",
+    "            values_df = values_df.loc[:, var]\n",
+    "            if vals.size != 0:\n",
+    "                vals = pd.merge(vals, values_df, left_index= True, right_index= True)\n",
+    "            else:\n",
+    "                vals = values_df\n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
+    "            print(\"Unable to fetch %s\" % var)\n",
+    "\n",
+    "    return vals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = snotel_fetch('SNOTEL:682_CO_SNTL')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SNOTEL:WTEQ_H</th>\n",
+       "      <th>SNOTEL:SNWD_H</th>\n",
+       "      <th>SNOTEL:TOBS_H</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>datetime</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2015-12-01 00:00:00+00:00</th>\n",
+       "      <td>5.9</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>-2.74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-12-01 01:00:00+00:00</th>\n",
+       "      <td>5.8</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>-2.74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-12-01 02:00:00+00:00</th>\n",
+       "      <td>5.8</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>-5.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-12-01 03:00:00+00:00</th>\n",
+       "      <td>5.8</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>-7.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-12-01 04:00:00+00:00</th>\n",
+       "      <td>5.8</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>-8.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-11-30 20:00:00+00:00</th>\n",
+       "      <td>3.1</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>10.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-11-30 21:00:00+00:00</th>\n",
+       "      <td>3.1</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>11.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-11-30 22:00:00+00:00</th>\n",
+       "      <td>3.1</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>12.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-11-30 23:00:00+00:00</th>\n",
+       "      <td>3.1</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>12.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-12-01 00:00:00+00:00</th>\n",
+       "      <td>3.1</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>10.58</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>40287 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           SNOTEL:WTEQ_H  SNOTEL:SNWD_H  SNOTEL:TOBS_H\n",
+       "datetime                                                              \n",
+       "2015-12-01 00:00:00+00:00            5.9           29.0          -2.74\n",
+       "2015-12-01 01:00:00+00:00            5.8           29.0          -2.74\n",
+       "2015-12-01 02:00:00+00:00            5.8           29.0          -5.08\n",
+       "2015-12-01 03:00:00+00:00            5.8           29.0          -7.96\n",
+       "2015-12-01 04:00:00+00:00            5.8           29.0          -8.50\n",
+       "...                                  ...            ...            ...\n",
+       "2020-11-30 20:00:00+00:00            3.1           14.0          10.94\n",
+       "2020-11-30 21:00:00+00:00            3.1           14.0          11.66\n",
+       "2020-11-30 22:00:00+00:00            3.1           14.0          12.20\n",
+       "2020-11-30 23:00:00+00:00            3.1           14.0          12.56\n",
+       "2020-12-01 00:00:00+00:00            3.1           14.0          10.58\n",
+       "\n",
+       "[40287 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
    ]
   },
   {
