incorporate calfiornia snotel

--- a/src/data_acquisition/image_list.ipynb
+++ b/src/data_acquisition/image_list.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +37,26 @@
     "                d['cor'] = f.replace('unw','cor')\n",
     "                d['location'] = basename(loc_dir)\n",
     "                image_fps.append(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/bsuscratch/zacharykeskinen/data/uavsar/images/Eldorado National Forest, CA/dorado_34017_20006-004_20009-025_0007d_s01_L090_01_int_grd/dorado_34017_20006-004_20009-025_0007d_s01_L090_01_int_grd.csv'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_fps[20]['ann']"
    ]
   },
   {
