--- a/src/play/ulmo_play_2.ipynb
+++ b/src/play/ulmo_play_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +36,15 @@
     "#This is the latest CUAHSI API endpoint\n",
     "wsdlurl = 'https://hydroportal.cuahsi.org/Snotel/cuahsi_1_1.asmx?WSDL'\n",
     "sites = ulmo.cuahsi.wof.get_sites(wsdlurl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sites = ulmo.ncdc.ghcn_daily.get_stations(country='US', as_dataframe=True)"
    ]
   },
   {
