--- a/src/play/metloom_play.ipynb
+++ b/src/play/metloom_play.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +36,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mesowest"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from metloom.pointdata import CDECPointData\n",
+    "from metloom.variables import CdecStationVariables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +68,74 @@
     "    for i in result.index:\n",
     "        result.iloc[i]['geometry'] = Polygon(result.iloc[i]['geometry']['coordinates'][0])\n",
     "    boundary = gpd.GeoSeries(unary_union(result['geometry']))\n",
-    "    boundary_gdf = gpd.GeoDataFrame(boundary, columns = ['geometry'], crs = 'EPSG:4326')"
+    "    boundary_gdf = gpd.GeoDataFrame(boundary, columns = ['geometry'], crs = 'EPSG:4326')\n",
+    "    # vrs = [\n",
+    "    # CdecStationVariables.SWE,\n",
+    "    # CdecStationVariables.SNOWDEPTH\n",
+    "    # ]\n",
+    "    # points = CDECPointData.points_from_geometry(boundary_gdf, vrs, snow_courses=False)\n",
+    "    # sites = points.to_dataframe()\n",
+    "    # res = {}\n",
+    "    # for _, r in sites.iterrows():\n",
+    "    #     cdec_point = CDECPointData(r.id, r.name)\n",
+    "    #     ann = pd.read_csv(ann_fp)\n",
+    "    #     s = pd.to_datetime(ann.loc[0, 'start time of acquisition for pass 1'])\n",
+    "    #     e = pd.to_datetime(ann.loc[0, 'start time of acquisition for pass 2'])\n",
+    "    #     values = cdec_point.get_daily_data(s, e, variables = vrs)\n",
+    "    #     if values is not None:\n",
+    "    #         values = values.dropna(how= 'all', axis = 1)\n",
+    "    #         d = {}\n",
+    "    #         idx = [d.date() for d in values.index.levels[0]]\n",
+    "    #         if s.date() in idx or s.date() + pd.Timedelta('1 day') in idx and e.date() in idx or e.date() - pd.Timedelta('1 day') in idx:\n",
+    "    #             for var in vrs:\n",
+    "    #                 if var.name in values.columns:\n",
+    "    #                     unit = values[var.name + '_units'].values[0]\n",
+    "    #                     d[var.name] = imperial_to_metric(array = values[var.name].values, units = unit)\n",
+    "    #             d['phase'] = raster_box_extract(src, r.geometry.x, r.geometry.y, box_side)\n",
+    "    #             # d['inc'] = raster_box_extract(inc_src, r.geometry.x, r.geometry.y, box_side)\n",
+    "    #             # d['cor'] = raster_box_extract(cor_src, r.geometry.x, r.geometry.y, box_side)\n",
+    "    #             res[r['name']] = d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vrs = [\n",
+    "    CdecStationVariables.SWE,\n",
+    "    CdecStationVariables.SNOWDEPTH\n",
+    "    ]\n",
+    "points = CDECPointData.points_from_geometry(boundary_gdf, vrs, snow_courses=False)\n",
+    "sites = points.to_dataframe()\n",
+    "# res = {}\n",
+    "# for _, r in sites.iterrows():\n",
+    "#     cdec_point = CDECPointData(r.id, r.name)\n",
+    "#     ann = pd.read_csv(ann_fp)\n",
+    "#     s = pd.to_datetime(ann.loc[0, 'start time of acquisition for pass 1'])\n",
+    "#     e = pd.to_datetime(ann.loc[0, 'start time of acquisition for pass 2'])\n",
+    "#     values = cdec_point.get_daily_data(s, e, variables = vrs)\n",
+    "#     if values is not None:\n",
+    "#         values = values.dropna(how= 'all', axis = 1)\n",
+    "#         d = {}\n",
+    "#         idx = [d.date() for d in values.index.levels[0]]\n",
+    "#         if s.date() in idx or s.date() + pd.Timedelta('1 day') in idx and e.date() in idx or e.date() - pd.Timedelta('1 day') in idx:\n",
+    "#             for var in vrs:\n",
+    "#                 if var.name in values.columns:\n",
+    "#                     unit = values[var.name + '_units'].values[0]\n",
+    "#                     d[var.name] = imperial_to_metric(array = values[var.name].values, units = unit)\n",
+    "#             d['phase'] = raster_box_extract(src, r.geometry.x, r.geometry.y, box_side)\n",
+    "#             # d['inc'] = raster_box_extract(inc_src, r.geometry.x, r.geometry.y, box_side)\n",
+    "#             # d['cor'] = raster_box_extract(cor_src, r.geometry.x, r.geometry.y, box_side)\n",
+    "#             res[r['name']] = d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# California"
    ]
   },
   {
