elevation and location specific coherence

--- a/src/data_acquisition/image_list.ipynb
+++ b/src/data_acquisition/image_list.ipynb
@@ -2,16 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "from glob import glob\n",
-    "import os\n",
     "from os.path import basename, dirname, join, exists, expanduser\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "# from uavsar_pytools import UavsarCollection\n",
     "import pickle\n",
     "\n",
     "data_dir = '/bsuscratch/zacharykeskinen/data/uavsar/images'"
@@ -19,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,44 +27,41 @@
     "        if not img_dir.endswith('tmp'):\n",
     "            for f in glob(join(img_dir, '*unw.grd.tiff')):\n",
     "                csv_fp = glob(join(img_dir, '*.csv'))[0]\n",
+    "                df = pd.read_csv(csv_fp, index_col= 0)\n",
     "                inc_fp = glob(join(img_dir, '*.inc.tiff'))[0]\n",
     "                d = {}\n",
     "                d['fp'] = f\n",
     "                d['ann'] = csv_fp\n",
     "                d['inc'] = inc_fp\n",
     "                d['cor'] = f.replace('unw','cor')\n",
+    "                d['hgt'] = f.replace('unw','hgt')\n",
+    "                d['pol'] = basename(f).split('_')[6][-2:]\n",
+    "                d['heading'] = basename(f).split('_')[1][:3]\n",
     "                d['location'] = basename(loc_dir)\n",
+    "                d['flight1'] = pd.to_datetime(df.loc['value','start time of acquisition for pass 1'])\n",
+    "                d['flight2'] = pd.to_datetime(df.loc['value','start time of acquisition for pass 2'])\n",
     "                image_fps.append(d)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/bsuscratch/zacharykeskinen/data/uavsar/images/Eldorado National Forest, CA/dorado_34017_20006-004_20009-025_0007d_s01_L090_01_int_grd/dorado_34017_20006-004_20009-025_0007d_s01_L090_01_int_grd.csv'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "image_fps[20]['ann']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(expanduser('~/scratch/data/uavsar/image_fps'), 'wb') as f:\n",
     "    pickle.dump(image_fps, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loc_fps = [dic for dic in image_fps if dic['location'] == 'Salt Lake City, UT']\n",
+    "fps_2021 = [fs for fs in loc_fps if fs['flight1'] < pd.to_datetime('2020-10-01').tz_localize('UTC')]\n",
+    "fps_2021 = [fs for fs in fps_2021 if fs['pol']  == 'VV']"
    ]
   },
   {
@@ -96,7 +91,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
