--- a/src/play/gee_atmospheric_h20.ipynb
+++ b/src/play/gee_atmospheric_h20.ipynb
@@ -44,10 +44,36 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p>To authorize access needed by Earth Engine, open the following\n",
+       "        URL in a web browser and follow the instructions:</p>\n",
+       "        <p><a href=https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=MTtDWV6_Orhujr3CGutAEu4JJQ6oxTFZVE--Vgy3IQ4&tc=izZSNFCYn0LS7Cdu7nzl0EJsnpqLxRlhOURHCZXKzI8&cc=9537daiGndcSuNlRWAvPjzgXrOdBCLP6TvmFlvz0Ec0>https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=MTtDWV6_Orhujr3CGutAEu4JJQ6oxTFZVE--Vgy3IQ4&tc=izZSNFCYn0LS7Cdu7nzl0EJsnpqLxRlhOURHCZXKzI8&cc=9537daiGndcSuNlRWAvPjzgXrOdBCLP6TvmFlvz0Ec0</a></p>\n",
+       "        <p>The authorization workflow will generate a code, which you\n",
+       "        should paste in the box below</p>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Successfully saved authorization token.\n"
+     ]
+    }
+   ],
    "source": [
     "import ee\n",
-    "\n",
+    "ee.Authenticate()\n",
     "# Initialize the Earth Engine module.\n",
     "ee.Initialize()"
    ]
@@ -339,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
