--- a/src/coherence/lowman_coherence.ipynb
+++ b/src/coherence/lowman_coherence.ipynb
@@ -234,11 +234,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "5dd3130d27b37aaf1e73f2c22ab2dc41de66d0ace140f6eaa91934393372459a"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('uavsar')",
+   "display_name": "Python 3.9.13 ('proj')",
    "language": "python",
    "name": "python3"
   },
@@ -252,9 +249,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.13"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "be18628f3b6aaaf0d9a50c1a0a68c0122e22b01f7b4495836f3dc0caac12767e"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
