--- a/src/outdated/slc_stack/coreg/lidar_snow_coreg.ipynb
+++ b/src/outdated/slc_stack/coreg/lidar_snow_coreg.ipynb
@@ -501,11 +501,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "c732e25fc97d715fc566a980b16236952ce6fa020fb71e866d38b624bf749806"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.10 ('uavsar')",
+   "display_name": "Python 3.9.13 ('proj')",
    "language": "python",
    "name": "python3"
   },
@@ -519,9 +516,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.13"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "be18628f3b6aaaf0d9a50c1a0a68c0122e22b01f7b4495836f3dc0caac12767e"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
