--- a/src/coherence/spatial_coherence/tau_calc.ipynb
+++ b/src/coherence/spatial_coherence/tau_calc.ipynb
@@ -265,7 +265,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('uavsar')",
+   "display_name": "Python 3.9.13 ('proj')",
    "language": "python",
    "name": "python3"
   },
@@ -279,12 +279,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "ba8967e065a58c806f1bdb735567067b52f77062b6ff6cacc1c3011561bd9c8e"
+    "hash": "be18628f3b6aaaf0d9a50c1a0a68c0122e22b01f7b4495836f3dc0caac12767e"
    }
   }
  },
