--- a/src/overviews/collection_overview_vis.ipynb
+++ b/src/overviews/collection_overview_vis.ipynb
@@ -947,11 +947,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "be18628f3b6aaaf0d9a50c1a0a68c0122e22b01f7b4495836f3dc0caac12767e"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('proj')",
+   "display_name": "Python 3.9.12 ('uavsar')",
    "language": "python",
    "name": "python3"
   },
@@ -965,9 +962,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "ba8967e065a58c806f1bdb735567067b52f77062b6ff6cacc1c3011561bd9c8e"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
