--- a/src/coherence/spatial_coherence/all_taus_calc.ipynb
+++ b/src/coherence/spatial_coherence/all_taus_calc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,14 +52,63 @@
    "source": [
     "for fp in glob(join(netcdf_fps, '*')):\n",
     "    with open(fp, 'rb') as f:\n",
-    "        cor_vv = pickle.load(f)\n",
-    "    days = [int(d.split('_')[-1].replace('d','')) for d in cor_vv.band.values]\n",
-    "    taus = np.apply_along_axis(arr = cor_vv['cor_vv'].values, func1d = tau, axis = 0, days = days)\n",
-    "    da = cor_vv.isel({'band':0})['cor_vv']\n",
-    "    da = da.drop('band')\n",
-    "    da.values = taus\n",
-    "    da.rio.to_raster(join('/bsuhome/zacharykeskinen/uavsar/results/taus', basename(fp).replace('.pkl','.tif')))"
+    "        cor_vv = pickle.load(f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(cor_vv.band.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for fp in glob(join(netcdf_fps, '*')):\n",
+    "    with open(fp, 'rb') as f:\n",
+    "        cor_vv = pickle.load(f)\n",
+    "    if len(cor_vv.band.values) > 2:\n",
+    "        days = [int(d.split('_')[-1].replace('d','')) for d in cor_vv.band.values]\n",
+    "        taus = np.apply_along_axis(arr = cor_vv['cor_vv'].values, func1d = tau, axis = 0, days = days)\n",
+    "        da = cor_vv.isel({'band':0})['cor_vv']\n",
+    "        da = da.drop('band')\n",
+    "        da.values = taus\n",
+    "        da.rio.to_raster(join('/bsuhome/zacharykeskinen/uavsar/results/taus', basename(fp).replace('.pkl','.tif')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(glob(join(netcdf_fps, '*'))[0], 'rb') as f:\n",
+    "        cor_vv = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
