--- a/src/coherence/spatial_coherence/roughness/lidar_roughness.ipynb
+++ b/src/coherence/spatial_coherence/roughness/lidar_roughness.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,13 +26,13 @@
     "netcdf_fps = '/bsuhome/zacharykeskinen/scratch/data/uavsar/images/vv_coherence'\n",
     "\n",
     "data_fp = '/bsuhome/zacharykeskinen/scratch/data/uavsar/coherence'\n",
-    "with open(join(data_fp,'cor_vv.pkl'), 'rb') as f:\n",
+    "with open(join(data_fp,'cor_vv_2.pkl'), 'rb') as f:\n",
     "    cor_vv = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,18 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for loc, ds in cor_vv.items():\n",
-    "    if 'lidar-dem' in list(ds.keys()):\n",
-    "        cor_vv[loc] = cor_vv[loc].drop('lidar-dem')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +181,7 @@
    "outputs": [],
    "source": [
     "data_fp = '/bsuhome/zacharykeskinen/scratch/data/uavsar/coherence'\n",
-    "with open(join(data_fp,'cor_vv_2.pkl'), 'wb') as f:\n",
+    "with open(join(data_fp,'cor_vv_3.pkl'), 'wb') as f:\n",
     "    pickle.dump(cor_vv, f)"
    ]
   },
