--- a/src/data_acquisition/xarray/netcdfcorvv.ipynb
+++ b/src/data_acquisition/xarray/netcdfcorvv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -60,19 +60,18 @@
      "output_type": "stream",
      "text": [
       "Utica, MT\n",
-      "0.1.Eldorado National Forest, CA\n",
-      "0.1.2.3.Donner Memorial State Park, CA\n",
-      "Rocky Mountains NP, CO\n",
-      "0.1.2.3.4.5.6.7.8.9.Grand Mesa, CO\n",
-      "0.1.2.3.4.5.6.7.8.9.Sierra National Forest, CA\n",
-      "0.1.2.Fraser, CO\n",
-      "0.1.2.3.4.5.6.7.8.9.10.11.12.13.14.Peeler Peak, CO\n",
-      "0.1.Silver City, ID\n",
-      "0.Ironton, CO\n",
-      "0.1.2.3.4.5.6.Los Alamos, NM\n",
-      "0.1.2.Lowman, CO\n",
-      "0.1.2.3.4.5.6.7.8.9.10.11.12.13.Salt Lake City, UT\n",
-      "0.1.2.3.4.5.6.7.8.9.10.11.12.13.14.15.16.17."
+      "0.1."
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'sitename' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/bsuhome/zacharykeskinen/uavsar/src/data_acquisition/xarray/netcdfcorvv.ipynb Cell 3\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bborah/bsuhome/zacharykeskinen/uavsar/src/data_acquisition/xarray/netcdfcorvv.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=34'>35</a>\u001b[0m         cor_coarse \u001b[39m=\u001b[39m cor\u001b[39m.\u001b[39mrio\u001b[39m.\u001b[39mreproject_match(cor_base)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bborah/bsuhome/zacharykeskinen/uavsar/src/data_acquisition/xarray/netcdfcorvv.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=35'>36</a>\u001b[0m     cor_vv[i] \u001b[39m=\u001b[39m cor_coarse\u001b[39m.\u001b[39mvalues[\u001b[39m0\u001b[39m]\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bborah/bsuhome/zacharykeskinen/uavsar/src/data_acquisition/xarray/netcdfcorvv.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=37'>38</a>\u001b[0m cor_vv \u001b[39m=\u001b[39m xr\u001b[39m.\u001b[39mDataset(\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bborah/bsuhome/zacharykeskinen/uavsar/src/data_acquisition/xarray/netcdfcorvv.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=38'>39</a>\u001b[0m     data_vars \u001b[39m=\u001b[39m \u001b[39mdict\u001b[39m(\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bborah/bsuhome/zacharykeskinen/uavsar/src/data_acquisition/xarray/netcdfcorvv.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=39'>40</a>\u001b[0m         cor_vv \u001b[39m=\u001b[39m ([\u001b[39m\"\u001b[39m\u001b[39mband\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39my\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mx\u001b[39m\u001b[39m\"\u001b[39m], cor_vv)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bborah/bsuhome/zacharykeskinen/uavsar/src/data_acquisition/xarray/netcdfcorvv.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=40'>41</a>\u001b[0m     ),\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bborah/bsuhome/zacharykeskinen/uavsar/src/data_acquisition/xarray/netcdfcorvv.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=41'>42</a>\u001b[0m     coords \u001b[39m=\u001b[39m \u001b[39mdict\u001b[39m(\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bborah/bsuhome/zacharykeskinen/uavsar/src/data_acquisition/xarray/netcdfcorvv.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=42'>43</a>\u001b[0m         lon \u001b[39m=\u001b[39m ([\u001b[39m\"\u001b[39m\u001b[39mx\u001b[39m\u001b[39m\"\u001b[39m], cor_coarse\u001b[39m.\u001b[39mx\u001b[39m.\u001b[39mdata),\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bborah/bsuhome/zacharykeskinen/uavsar/src/data_acquisition/xarray/netcdfcorvv.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=43'>44</a>\u001b[0m         lat \u001b[39m=\u001b[39m ([\u001b[39m\"\u001b[39m\u001b[39my\u001b[39m\u001b[39m\"\u001b[39m], cor_coarse\u001b[39m.\u001b[39my\u001b[39m.\u001b[39mdata),\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bborah/bsuhome/zacharykeskinen/uavsar/src/data_acquisition/xarray/netcdfcorvv.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=44'>45</a>\u001b[0m         band \u001b[39m=\u001b[39m bands\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bborah/bsuhome/zacharykeskinen/uavsar/src/data_acquisition/xarray/netcdfcorvv.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=45'>46</a>\u001b[0m     ),\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2Bborah/bsuhome/zacharykeskinen/uavsar/src/data_acquisition/xarray/netcdfcorvv.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=46'>47</a>\u001b[0m     attrs \u001b[39m=\u001b[39m \u001b[39mdict\u001b[39m(description \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mCoherence for VV over \u001b[39m\u001b[39m{\u001b[39;00msitename\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bborah/bsuhome/zacharykeskinen/uavsar/src/data_acquisition/xarray/netcdfcorvv.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=47'>48</a>\u001b[0m )\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bborah/bsuhome/zacharykeskinen/uavsar/src/data_acquisition/xarray/netcdfcorvv.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=48'>49</a>\u001b[0m cor_vv[\u001b[39m'\u001b[39m\u001b[39mx\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m cor_coarse\u001b[39m.\u001b[39mx\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bborah/bsuhome/zacharykeskinen/uavsar/src/data_acquisition/xarray/netcdfcorvv.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=49'>50</a>\u001b[0m cor_vv[\u001b[39m'\u001b[39m\u001b[39my\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m cor_coarse\u001b[39m.\u001b[39my\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sitename' is not defined"
      ]
     }
    ],
