--- a/src/writing/agu2022/poster_values.ipynb
+++ b/src/writing/agu2022/poster_values.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,6 +70,26 @@
    ],
    "source": [
     "len([i for i in image_fps if (i['location'] == 'Lowman, CO') & (i['pol'] == 'VV')])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "89"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len([i for i in image_fps if  (i['pol'] == 'VV')])"
    ]
   },
   {
