--- a/src/writing/agu2022/poster_values.ipynb
+++ b/src/writing/agu2022/poster_values.ipynb
@@ -94,10 +94,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(glob(join('/bsuhome/zacharykeskinen/scratch/data/uavsar/lidar', '*', '*SD*.tif'))) + len(glob(join('/bsuhome/zacharykeskinen/scratch/data/uavsar/lidar', '*', '*snowdepth*.tif')))\\\n",
+    "    + len(glob(join('/bsuhome/zacharykeskinen/scratch/data/uavsar/lidar', '*', '*', '*SD*.tif')))"
+   ]
   }
  ],
  "metadata": {
