--- a/src/coherence/spatial_coherence/snowpits/snowdepth.ipynb
+++ b/src/coherence/spatial_coherence/snowpits/snowdepth.ipynb
@@ -474,7 +474,46 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cors = []\n",
+    "sds = []\n",
+    "for i, r in pits.iterrows():\n",
+    "    if r['Location'] != 'Boise River Basin':\n",
+    "        img_loc = locs_dic[r['Location']]\n",
+    "    else:\n",
+    "        if 'LDP' in r.Site:\n",
+    "            img_loc = 'Silver City, ID'\n",
+    "        else:\n",
+    "            img_loc = 'Lowman, CO'\n",
+    "    \n",
+    "    date = pd.to_datetime(r['Date/Local Standard Time'])\n",
+    "    if 'CA' not in img_loc:\n",
+    "        date = date.tz_localize('US/Mountain')\n",
+    "    else:\n",
+    "        date = date.tz_localize('US/Pacific')\n",
+    "    uavsar_images = [fps for fps in image_fps if fps['location'] == img_loc]\n",
+    "    between = [i for i in uavsar_images if (i['flight1'] - pd.Timedelta('1 days') < date) & (i['flight2'] + pd.Timedelta('1 days') > date)  & (i['pol'] == 'VV')]\n",
+    "    if len(between) > 0:\n",
+    "        for b in between:\n",
+    "            cor = rxa.open_rasterio(b['cor'])\n",
+    "            cor_pit = cor.sel(x = r.geometry.x, y = r.geometry.y, method = 'nearest').values\n",
+    "            siteDetails = pd.read_csv(glob(join('/bsuhome/zacharykeskinen/scratch/data/uavsar/snowpits/pits', r.PitID ,'*siteDetails*'))[0], index_col = '# Location')\n",
+    "            trees = siteDetails.loc['# Tree Canopy'].iloc[0]\n",
+    "            groundwet = siteDetails.loc['# Ground Condition'].iloc[0]\n",
+    "\n",
+    "            temp = pd.read_csv(glob(join('/bsuhome/zacharykeskinen/scratch/data/uavsar/snowpits/pits', r.PitID ,'*temperature*'))[0], index_col = '# Location')\n",
+    "            temp_min = temp.loc[[i for i in temp.index if '# ' not in i]].astype(float).min().iloc[0]\n",
+    "\n",
+    "            strat = pd.read_csv(glob(join('/bsuhome/zacharykeskinen/scratch/data/uavsar/snowpits/pits', r.PitID ,'*strat*'))[0], comment = '#', names = ['Top (cm)','Bottom (cm)','Grain Size (mm)','Grain Type','Hand Hardness','Manual Wetness','Comments'])\n",
+    "            wet_depth = 0\n",
+    "            for i_pit, r_pit in strat.iterrows():\n",
+    "                if r_pit['Manual Wetness'] != 'D':\n",
+    "                    wet_depth += r_pit['Top (cm)'] - r_pit['Bottom (cm)']\n",
+    "            # if trees == 'No Trees' and groundwet == 'Frozen' and temp_min < -1 :\n",
+    "            if ~np.isnan(cor_pit) and trees == 'No Trees':\n",
+    "                cors.append(cor_pit[0])\n",
+    "                sds.append(wet_depth)"
+   ]
   }
  ],
  "metadata": {
