--- a/src/lidar_compare/lidar_compare.ipynb
+++ b/src/lidar_compare/lidar_compare.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'metloom'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/Users/zachkeskinen/Documents/uavsar/src/lidar_compare/lidar_compare.ipynb Cell 1\u001b[0m in \u001b[0;36m<cell line: 12>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/zachkeskinen/Documents/uavsar/src/lidar_compare/lidar_compare.ipynb#W0sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mseaborn\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39msns\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/zachkeskinen/Documents/uavsar/src/lidar_compare/lidar_compare.ipynb#W0sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mscipy\u001b[39;00m \u001b[39mimport\u001b[39;00m stats\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/zachkeskinen/Documents/uavsar/src/lidar_compare/lidar_compare.ipynb#W0sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmetloom\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpointdata\u001b[39;00m \u001b[39mimport\u001b[39;00m SnotelPointData\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/zachkeskinen/Documents/uavsar/src/lidar_compare/lidar_compare.ipynb#W0sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39muavsar_pytools\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39msnow_depth_inversion\u001b[39;00m \u001b[39mimport\u001b[39;00m phase_from_depth, depth_from_phase\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/zachkeskinen/Documents/uavsar/src/lidar_compare/lidar_compare.ipynb#W0sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(expanduser(\u001b[39m'\u001b[39m\u001b[39m~/scratch/data/uavsar/image_fps\u001b[39m\u001b[39m'\u001b[39m), \u001b[39m'\u001b[39m\u001b[39mrb\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m f:\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'metloom'"
+     ]
+    }
+   ],
    "source": [
     "from glob import glob\n",
     "from datetime import datetime, date\n",
@@ -28,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +135,7 @@
    "outputs": [],
    "source": [
     "phase = rxa.open_rasterio(img['fp'])\n",
-    "phase = phase.rio.clip_box(*sd.rio.bounds())\n"
+    "phase = phase.rio.clip_box(*sd.rio.bounds())"
    ]
   },
   {
@@ -782,7 +794,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('proj')",
+   "display_name": "uavsar",
    "language": "python",
    "name": "python3"
   },
@@ -796,12 +808,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "be18628f3b6aaaf0d9a50c1a0a68c0122e22b01f7b4495836f3dc0caac12767e"
+    "hash": "ba8967e065a58c806f1bdb735567067b52f77062b6ff6cacc1c3011561bd9c8e"
    }
   }
  },
