--- a/src/coherence/spatial_coherence/taus/orbit_compare_lowman.ipynb
+++ b/src/coherence/spatial_coherence/taus/orbit_compare_lowman.ipynb
@@ -32,17 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.optimize import curve_fit\n",
     "\n",
-    "def fit_coh_decay_model(cohs, days, tau_guess, gamma_inf_guess = 0.3):\n",
+    "def fit_coh_decay_model(cohs, days, tau_guess, bounds, xtol, ftol, gamma_inf_guess = 0.3):\n",
     "    # https://rowannicholls.github.io/python/curve_fitting/exponential.html\n",
     "\n",
     "    # Fit the function a * np.exp(b * t) + c to x and y\n",
-    "    params, pcov = curve_fit(lambda t, gamma_inf, tau: gamma_inf + (1 - gamma_inf) * np.exp(- t / tau), x, y, p0=(gamma_inf_guess, tau_guess))\n",
+    "    params, pcov = curve_fit(lambda t, gamma_inf, tau: gamma_inf + (1 - gamma_inf) * np.exp(- t / tau), x, y, p0=(gamma_inf_guess, tau_guess),\\\n",
+    "        bounds = bounds, ftol = ftol, xtol = xtol)\n",
     "\n",
     "    gamma_inf, tau = params\n",
     "\n",
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,36 +63,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/bsuhome/zacharykeskinen/miniconda3/envs/proj/lib/python3.9/site-packages/numpy/lib/shape_base.py:379: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
-      "  res = asanyarray(func1d(inarr_view[ind0], *args, **kwargs))\n",
-      "/bsuhome/zacharykeskinen/miniconda3/envs/proj/lib/python3.9/site-packages/numpy/lib/shape_base.py:402: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
-      "  buff[ind] = asanyarray(func1d(inarr_view[ind], *args, **kwargs))\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
    "source": [
     "days = [int(d.split('_')[-1].replace('d','')) for d in cor_vv.band.values]\n",
-    "taus = np.apply_along_axis(arr = cor_vv['cor_vv'].values, func1d = fit_coh_decay_model, axis = 0, days = days, tau_guess = 0.3)\n",
-    "# da = cor_vv.isel({'band':0})['cor_vv']\n",
-    "# da = da.drop('band')\n",
-    "# da.values = taus\n",
-    "# da.rio.to_raster(join('/bsuhome/zacharykeskinen/uavsar/results/taus', basename(fp).replace('.pkl','.tif')))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "taus"
+    "taus = np.apply_along_axis(arr = cor_vv['cor_vv'].values, func1d = fit_coh_decay_model, axis = 0, days = days, tau_guess = 30,\\\n",
+    "    bounds = ([0, 0], [1, 600]), ftol = 1, xtol = 1)"
    ]
   }
  ],
